# guess_factor

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  config.txt  genindex.html  guessfactor.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml  stable.yml  test.yml
_autosummary/: guessfactor.calc.html  guessfactor.calc_print.html  guessfactor.calc_values.html  guessfactor.get_max_threads.html
_sources/: index.rst.txt
_sources/_autosummary/: guessfactor.calc_print.rst.txt  guessfactor.get_max_threads.rst.txt  guessfactor.set_num_threads.rst.txt
docs/: Makefile  conf.py  make.bat
guessfactor/: CMakeLists.txt  Makefile  calc.cc  config.h  main.cpp  params.cc  util.h
src/: CMakeLists.txt  Makefile  a.out  calc.h  config.h  constsize.cc  constsize.h  flexsize.cc  flexsize.h  info.h  main.cc  main.cpp  main.h  params.cc  params.h  py_main.cpp  util.h
src/cc/: calc.cc  constsize.cc  flexsize.cc  params.cc  py_main.cpp
src/h/: calc.h  config.h  constsize.h  flexsize.h  info.h
test/: .buildinfo  genindex.html  guessfactor.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
test/_autosummary/: guessfactor.calc.html  guessfactor.calc_print.html  guessfactor.calc_values.html  guessfactor.get_max_threads.html  guessfactor.set_num_threads.html
test/_modules/: index.html
test/_sources/: guessfactor.rst.txt  index.rst.txt
test/_sources/_autosummary/: guessfactor.calc.rst.txt  guessfactor.calc_values.rst.txt
