[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build",
  "cmake",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-all = "yum install -y boost boost-devel boost-static cmake"
[tool.cibuildwheel.macos]
before-all = "brew install boost cmake"

